Lab 3 solution.md

--- a/labs/Lab_03_html_intro/task_1.html
+++ b/labs/Lab_03_html_intro/task_1.html
@@ -1,1 +1,20 @@
-<заголовок1>The Life of</заголовок1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="imgs/playlist-favicon.ico">
+    <title>The Life of ITUshnik</title>
+</head>
+<body>
+    <h1 style="font-size: 31px; text-transform: uppercase; font-style: italic;">THE LIFE OF</h1>
+    <h1 style="font-size: 31px;">ITUshik</h1>
+
+    <img src="imgs/album.png" alt="Супер-пупер стильный код" width="210">
+
+    <h1>Плейлист для учёбы на чилле</h1>
+    <h2>Один раз послушал - семь раз забил</h2>
+</body>
+
+<a href="https://music.yandex.ru/users/ya.indietronica/playlists/1013" target="_blank">Музыка тут!</a>
+</html>
