Added a solution for 7 laboratory work

--- a/labs/Lab_07_refactoring/solution/index.html
+++ b/labs/Lab_07_refactoring/solution/index.html
@@ -11,7 +11,7 @@
    let a = prompt('var one');
    let _ = prompt('var two');
    if (a === _) {
-       console.log('equally')
+       console.log('equally');
    } else{
        console.log('not equal');
    }
@@ -68,7 +68,7 @@
            continue;
        }
        if (studentsClass[i].point < 4){
-           badStudents.push(studentsClass[i])
+           badStudents.push(studentsClass[i]);
        }
        averageScore += studentsClass[i].point;
        count++;
@@ -82,7 +82,7 @@
    }
 
    badStudents.forEach((meaning) => {
-       console.log('Фио: ' + meaning.FIO + '; Оценка: ' + meaning.point)
+       console.log('Фио: ' + meaning.FIO + '; Оценка: ' + meaning.point);
    });
 
 </script>
